linuxmuster-linbo (2.3.26-0) babo62; urgency=low

  * debian/rules: fixed file distribution in linuxmuster-linbo-common7 pkg.
  * linuxmuster-linbo7:
    - added script mkgrubhostimg.py for host specific pxe boot image creation.
    - removed module variables in mkgrubnetdir.sh using global variables from
      linuxmuster-base7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2017 16:26:56 +0000

linuxmuster-linbo (2.3.25-1) babo62; urgency=low

  * packages consolidation:
    - improved file distribution between packages.
    - moved all common files to common packages.
    - use build host grub packages for i386 modules rather than downloaded ones.
    - linuxmuster-linbo7: create grub's netdirs on target host during postinst.
    - moved update-linbofs to linuxmuster-linbo7's postinst.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 29 May 2017 17:27:35 +0000

linuxmuster-linbo (2.3.25-0) babo62; urgency=low

  * added gcc-multilib and g++-multilib to build deps.
  * minor improvements in mkgrubnetdir.sh.
  * added script mkgrubhostimg.sh for host specific pxe boot image creation.
  * added pxe boot menu option to linbo.iso.
  * added output several control options to make-linbo-iso.sh.
  * added ipxe also as efi boot fallback option to local grub.cfg.
  * minor grub cfg improvements.
  * fixed boot loop introduced with 2.3.24.
  * fix: added biosdisk module to grub's i386-pc netboot image again.
  * linbo_cmd, set_efibootorder():
    - improved efi network device recognition.
    - fixed efi operating system boot under kvm virtualization.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 29 May 2017 10:41:12 +0000

linuxmuster-linbo (2.3.24-0) babo62; urgency=low

  * added minimal grub pxe boot image for i386-pc (core.min).
  * removed biosdisk module from grub boot images.
  * added failsafe linbo pxe and local boot mode if no group specific cfg exists
    on the server.
  * implemented host specific grub configs.