@@ -1,14 +1,0 @@
-linuxmuster-linbo 32/64 build instructions
-==========================================
-
-* Install 64bit Ubuntu 16.04.
-
-* Add 32bit Architecture:
-  sudo dpkg --add-architecture i386
-  sudo apt update
-
-* Install build depends (uses sudo):
-  ./get-depends.sh
-
-* Build package:
-  ./buildpackage.sh
