@@ -1,1 +1,1 @@
-LINBO 2.3.26-0
+LINBO 2.3.27-0
